# gls-box

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  requirements.txt
scripts/: build.sh  init.sh
shaders/: fragment.glsl  vertex.glsl
src/: application.cpp  application.h  main.cpp
src/platform/: window.cpp  window.h
src/renderer/: renderer.cpp  renderer.h  shader.cpp  shader.h  triangle.cpp  triangle.h
